--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                     <li class="nav__item">
                         <a href="#resume" class="nav__link">Resume</a>
-                        <a href="assets/Resume/kunal-supekar.pdf" download class="nav__download-link" target="_blank">
+                        <a href="assets/Resume/kunal-supekar.pdf" download class="nav__link" target="_blank">
                             <i class="fas fa-eye" style='margin-left: 10px;'></i>
                             <!-- Assuming you have an icon library -->
                             <!-- Or you can use text like "Download" -->
