--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                     <li class="nav__item"><a href="#internships" class="nav__link">Internships</a></li>
+
                     <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
                     <li class="nav__item">
+                     <li class="nav__item">
                         <a href="#resume" class="nav__link">Resume</a>
-                        <a href="assets/Resume/kunal-supekar.pdf" download class="nav__link" target="_blank">
+                        <a href="assets/Resume/kunal-supekar.pdf" target="_blank" class="nav__download-link">
                             <i class="fas fa-eye" style='margin-left: 10px;'></i>
-                            <!-- Assuming you have an icon library -->
-                            <!-- Or you can use text like "Download" -->
                         </a>
+                    </li>
                     </li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                 </ul>
@@ -279,7 +281,7 @@
                     </a>
                 </div>
             </section> -->
-        <section class="internships section" id="work">
+        <section class="internships section" id="internships">
             <h2 class="section-title">Internships</h2>
 
             <div class="internships__container bd-grid">
